# commit-meter

./: .gitignore  .uvignore  Makefile  README.md  main.py  pyproject.toml  requirements.txt  start-temp.ps1  start-temp.sh
app/: main.py
app/config/: main.py
app/controller/: overtime_controller.py
app/controllers/: github_overtime.py  overtime.py
app/gitlab/: constant.py
app/model/: overtime_analyzer.py
app/models/: analyzer.py  database_manager.py  github_analyzer.py  github_client.py  gitlab_client.py  overtime_calculator.py  report_generator.py
app/settings/: config.py
app/utils/: logger.py
app/view/: overtime_view.py
app/views/: github_interface.py  gitlab_interface.py  interface.py
deploy/: Dockerfile
github/: main.py
